Enhance mobile responsiveness in styles.css by adjusting project grid layout and logo positioning. Set padding and margins for better alignment on smaller screens, ensuring a more cohesive design across devices.

--- a/styles.css
+++ b/styles.css
@@ -336,6 +336,13 @@ transition: box-shadow .25s;
 
 /* Mobile tabs and title */
 @media (max-width: 768px) {
+  .project-grid-wrapper {
+    padding: 0;
+    width: 90vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+  
   .work-title-section {
     width: 100%;
   }
@@ -348,6 +355,10 @@ transition: box-shadow .25s;
   .project-tab {
     font-size: 13px;
     padding: 10px 2px;
+  }
+  
+  .project-grid {
+    max-width: 100%;
   }
 }
 
@@ -3394,7 +3405,7 @@ html {
 
   .floating-logo {
     top: 3.8vh;
-    left: 2.8vw;
+    left: 5vw;
     width: 40px;
     height: 40px;
   }
@@ -5149,7 +5160,7 @@ html {
 
   .floating-logo {
     top: 3.8vh;
-    left: 2.8vw;
+    left: 5vw;
     width: 40px;
     height: 40px;
   }
@@ -6904,7 +6915,7 @@ html {
 
   .floating-logo {
     top: 3.8vh;
-    left: 2.8vw;
+    left: 5vw;
     width: 40px;
     height: 40px;
   }
@@ -8659,7 +8670,7 @@ html {
 
   .floating-logo {
     top: 3.8vh;
-    left: 2.8vw;
+    left: 5vw;
     width: 40px;
     height: 40px;
   }
@@ -10414,7 +10425,7 @@ html {
 
   .floating-logo {
     top: 3.8vh;
-    left: 2.8vw;
+    left: 5vw;
     width: 40px;
     height: 40px;
   }
@@ -12169,7 +12180,7 @@ html {
 
   .floating-logo {
     top: 3.8vh;
-    left: 2.8vw;
+    left: 5vw;
     width: 40px;
     height: 40px;
   }
