--- a/styles.css
+++ b/styles.css
@@ -378,6 +378,11 @@ transition: box-shadow .25s;
   box-shadow: 75px var(--card-box-shadow-1-y) var(--card-box-shadow-1-blur) var(--card-box-shadow-1), 0px var(--card-box-shadow-2-y) var(--card-box-shadow-2-blur) var(--card-box-shadow-2), 0 0 0 1px var(--card-border-color);
 }
 
+.project-content > p {
+  font-weight: 300;
+  color: #6B7785;
+}
+
 .image-link {
   display: block;
   text-decoration: none;
