--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
   padding: 0;
   min-height: 100vh;
   font-family: 'inter', Arial, sans-serif;
-  background: #f8f8f8;
+  background: rgba(247, 247, 245, 0.75);
   display: flex;
   flex-direction: column;
   justify-content: center;
