--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
   padding: 0;
   min-height: 100vh;
   font-family: 'inter', Arial, sans-serif;
-  background: rgba(247, 247, 245, 0.75);
+  background: rgb(250, 249, 245, 0.8);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -2708,7 +2708,7 @@ html {
   background: #f8f9fa;
   border-radius: 8px;
   text-align: left;
-  border: 1px solid rgba(148, 123, 87, 0.05);
+  border: 1px solid rgba(148, 123, 87, 0.15);
   border-radius: 8px 8px 0px 0px;
 }
 
@@ -2720,7 +2720,7 @@ html {
   display: flex;
   flex-direction: column;
   background-color: #f8f9fa;
-  border: 1px solid rgba(148, 123, 87, 0.05);
+  border: 1px solid rgba(148, 123, 87, 0.15);
   border-radius: 0px 0px 8px 8px;
   border-top: none;
   
@@ -4452,36 +4452,6 @@ html {
   overflow-y: auto;
 }
 
-.toc-header {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  font-size: 12px;
-  font-weight: 600;
-  color: #737373;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  padding: 12px 16px;
-  background: #f8f9fa;
-  border-radius: 8px;
-  text-align: left;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 8px 8px 0px 0px;
-}
-
-.toc-header svg {
-  flex-shrink: 0;
-}
-
-.toc-nav {
-  display: flex;
-  flex-direction: column;
-  background-color: #f8f9fa;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 0px 0px 8px 8px;
-  border-top: none;
-  
-}
 
 .toc-link {
   display: block;
@@ -6207,36 +6177,6 @@ html {
   overflow-y: auto;
 }
 
-.toc-header {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  font-size: 12px;
-  font-weight: 600;
-  color: #737373;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  padding: 12px 16px;
-  background: #f8f9fa;
-  border-radius: 8px;
-  text-align: left;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 8px 8px 0px 0px;
-}
-
-.toc-header svg {
-  flex-shrink: 0;
-}
-
-.toc-nav {
-  display: flex;
-  flex-direction: column;
-  background-color: #f8f9fa;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 0px 0px 8px 8px;
-  border-top: none;
-  
-}
 
 .toc-link {
   display: block;
@@ -7962,36 +7902,6 @@ html {
   overflow-y: auto;
 }
 
-.toc-header {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  font-size: 12px;
-  font-weight: 600;
-  color: #737373;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  padding: 12px 16px;
-  background: #f8f9fa;
-  border-radius: 8px;
-  text-align: left;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 8px 8px 0px 0px;
-}
-
-.toc-header svg {
-  flex-shrink: 0;
-}
-
-.toc-nav {
-  display: flex;
-  flex-direction: column;
-  background-color: #f8f9fa;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 0px 0px 8px 8px;
-  border-top: none;
-  
-}
 
 .toc-link {
   display: block;
@@ -9717,36 +9627,6 @@ html {
   overflow-y: auto;
 }
 
-.toc-header {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  font-size: 12px;
-  font-weight: 600;
-  color: #737373;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  padding: 12px 16px;
-  background: #f8f9fa;
-  border-radius: 8px;
-  text-align: left;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 8px 8px 0px 0px;
-}
-
-.toc-header svg {
-  flex-shrink: 0;
-}
-
-.toc-nav {
-  display: flex;
-  flex-direction: column;
-  background-color: #f8f9fa;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 0px 0px 8px 8px;
-  border-top: none;
-  
-}
 
 .toc-link {
   display: block;
@@ -11472,36 +11352,6 @@ html {
   overflow-y: auto;
 }
 
-.toc-header {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  font-size: 12px;
-  font-weight: 600;
-  color: #737373;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  padding: 12px 16px;
-  background: #f8f9fa;
-  border-radius: 8px;
-  text-align: left;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 8px 8px 0px 0px;
-}
-
-.toc-header svg {
-  flex-shrink: 0;
-}
-
-.toc-nav {
-  display: flex;
-  flex-direction: column;
-  background-color: #f8f9fa;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 0px 0px 8px 8px;
-  border-top: none;
-  
-}
 
 .toc-link {
   display: block;
@@ -13227,36 +13077,6 @@ html {
   overflow-y: auto;
 }
 
-.toc-header {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  font-size: 12px;
-  font-weight: 600;
-  color: #737373;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  padding: 12px 16px;
-  background: #f8f9fa;
-  border-radius: 8px;
-  text-align: left;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 8px 8px 0px 0px;
-}
-
-.toc-header svg {
-  flex-shrink: 0;
-}
-
-.toc-nav {
-  display: flex;
-  flex-direction: column;
-  background-color: #f8f9fa;
-  border: 1px solid rgba(148, 123, 87, 0.05);
-  border-radius: 0px 0px 8px 8px;
-  border-top: none;
-  
-}
 
 .toc-link {
   display: block;
